# rewards

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
config/: settings.py  urls.py
rewards/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_scheduledreward_is_processed.py  0003_create_dummy_user.py
